# tauri-plugin-notifications

./: .gitignore  .prettierignore  Cargo.toml  README.md  build.rs  cspell.json  deny.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build-demo.yml  checks.yml  publish.yml  tests.yml
android/: .gitignore  build.gradle.kts  consumer-rules.pro  settings.gradle
android/src/androidTest/java/: ChannelManagerInstrumentedTest.kt  NotificationInstrumentedTest.kt  NotificationStorageInstrumentedTest.kt
android/src/androidTest/java/app/tauri/notification/: AssetUtilsInstrumentedTest.kt  ChannelManagerInstrumentedTest.kt  DateMatchInstrumentedTest.kt  NotificationInstrumentedTest.kt  NotificationStorageInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: NotificationPlugin.kt  TauriNotificationManager.kt
android/src/main/java/app/tauri/notification/: ChannelManager.kt  Notification.kt  NotificationAttachment.kt  NotificationPlugin.kt  NotificationSchedule.kt  NotificationStorage.kt  TauriFirebaseMessagingService.kt  TauriNotificationManager.kt  TauriUnifiedPushMessagingService.kt
android/src/pushEnabled/: AndroidManifest.xml
android/src/test/java/: NotificationAttachmentTest.kt  NotificationStorageTest.kt
android/src/test/java/app/tauri/notification/: ChannelManagerTest.kt  DateMatchTest.kt  NotificationAttachmentTest.kt  NotificationPluginUnifiedPushTest.kt  NotificationScheduleTest.kt  NotificationStorageTest.kt  NotificationTest.kt  TauriUnifiedPushMessagingServiceTest.kt
docs/: communication-notifications.md
examples/notifications-demo/: package.json  pnpm-lock.yaml
examples/notifications-demo/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/notifications-demo/src-tauri/capabilities/: default.json
examples/notifications-demo/src-tauri/src/: lib.rs  main.rs
examples/notifications-demo/src/routes/: +page.svelte
guest-js/: index.test.ts  index.ts
ios/: .gitignore  Package.swift
ios/Extensions/CommunicationNotifications/: Info.plist
ios/Sources/: AppDelegateSwizzler.swift  Notification.swift  NotificationCategory.swift  NotificationHandler.swift  NotificationManager.swift  NotificationPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
macos/: .gitignore  Package.swift  README.md
macos/Sources/: AppDelegateSwizzler.swift  Notification.swift  NotificationCategory.swift  NotificationHandler.swift  NotificationPlugin.swift  bridging-header.h
macos/Tests/PluginTests/: MockFFI.swift  PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: remove_all.toml  set_click_listener_active.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  listeners.rs  macos.rs  mobile.rs  models.rs  unifiedpush.rs  windows.rs
