[package]
name = "tauri-plugin-notifications"
version = "0.3.4"
authors = ["You"]
description = "A Tauri v2 plugin for sending notifications on desktop and mobile platforms with support for system notifications and push delivery via FCM and APNs."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-notifications"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-notifications"

[features]
default = ["notify-rust"]
push-notifications = []
notify-rust = ["dep:notify-rust"]

[dependencies]
tauri = { version = "2.8.2" }
serde = "1.0"
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
log = "0.4"
rand = "0.9"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
url = { version = "2", features = ["serde"] }

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2.8.2", features = ["wry"] }

[target.'cfg(target_os = "macos")'.dependencies]
swift-bridge = { version = "0.1", features = ["async"], git = "https://github.com/chinedufn/swift-bridge", rev = "82b0885" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
notify-rust = { version = "4.11", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Data_Xml_Dom",
    "Foundation",
    "UI_Notifications",
] }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-bridge-build = { version = "0.1", git = "https://github.com/chinedufn/swift-bridge", rev = "82b0885" }

[dev-dependencies]
color-backtrace = "0.7"
ctor = "0.6"
maplit = "1"
