[package]
name = "tauri-plugin-notifications"
version = "0.5.0-rc.1"
authors = ["You"]
description = "A Tauri v2 plugin for sending notifications on desktop and mobile platforms with support for system notifications and push delivery via FCM and APNs."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-notifications"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-notifications"
categories = ["api-bindings", "gui", "os"]
keywords = ["tauri", "notifications", "push-notifications", "toast", "desktop"]

[features]
default = ["notify-rust"]
push-notifications = ["dep:zbus", "dep:tokio", "dep:uuid"]
notify-rust = ["dep:notify-rust"]

[dependencies]
tauri = "2"
serde = "1.0"
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
log = "0.4"
rand = "0.10"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
url = { version = "2", features = ["serde"] }

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", features = ["wry"] }

[target.'cfg(target_os = "macos")'.dependencies]
swift-bridge = { version = "0.1", features = ["async"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
notify-rust = { version = "4.11", optional = true }

# UnifiedPush stack — only relevant on desktop Linux, kept optional so non-Linux
# builds never pull in the zbus/tokio/uuid crates.
[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"], optional = true }
tokio = { version = "1", default-features = false, features = ["sync", "macros", "time"], optional = true }
uuid = { version = "1", default-features = false, features = ["v4", "fast-rng"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Data_Xml_Dom",
    "Foundation",
    "Networking_PushNotifications",
    "UI_Notifications",
] }
nt-time = "0.15"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-bridge-build = "0.1"

[dev-dependencies]
color-backtrace = "0.7"
ctor = "1.0"
maplit = "1"
